--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,19 @@
-/composer.lock
-/vendor
-/node_modules
+# Editors
+*~
+*.kate-swp
+.*.swp
+sublime-*
+.project
+.settings
+\#*#
+.#*
+/.idea
+
+# Install and build artifacts
+node_modules
+composer.lock
+vendor
 .eslintcache
+
+# OS
+.DS_Store
